--- a/inspect_results_805.ipynb
+++ b/inspect_results_805.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +369,7 @@
     "args.hard = True\n",
     "args.prediction_steps = 19\n",
     "args.control_constraint = 1.0\n",
+    "args.gt_A=True\n",
     "\n",
     "        \n",
     "decoder = MLPDecoder_Causal(args).cuda()\n",
@@ -2188,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2205,7 +2206,7 @@
     }
    ],
    "source": [
-    "x = np.load('data/datasets/feat_valid_causal_vel_x0s.npy')\n",
+    "x = np.load('data/datasets/feat_train_causal_vel_x0s.npy')\n",
     "for i in range(6):\n",
     "    #[shapes,colors,mus,thetas,masses,v0s]\n",
     "    print(set(x[:,i,0,0]))"
@@ -2213,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2223,7 +2224,7 @@
       "{8.0, 4.0, 5.0, 7.0}\n",
       "{8.0, 2.0, 4.0, 6.0}\n",
       "{0.18, 0.26, 0.48, 0.5}\n",
-      "{0.8490790955648089, 0.6981317007977318, 1.1635528346628863, 0.5711986642890533}\n",
+      "{0.8490790955648089, 0.6981317007977318, 0.5711986642890533, 1.1635528346628863}\n",
       "{2.7, 3.6, 2.3, 7.0}\n",
       "{8.0, 12.0, 5.9, 14.0}\n"
      ]
@@ -2234,6 +2235,45 @@
     "for i in range(6):\n",
     "    #[shapes,colors,mus,thetas,masses,v0s]\n",
     "    print(set(x[:,i,0,0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.7      ,\n",
+       "         8.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.7      ,\n",
+       "        12.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.7      ,\n",
+       "         5.9      ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.7      ,\n",
+       "        14.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  3.6      ,\n",
+       "         8.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  3.6      ,\n",
+       "        12.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  3.6      ,\n",
+       "         5.9      ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  3.6      ,\n",
+       "        14.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.3      ,\n",
+       "         8.       ],\n",
+       "       [ 8.       ,  8.       ,  0.18     ,  0.8490791,  2.3      ,\n",
+       "        12.       ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[:10,:-2,0,0]"
    ]
   },
   {
